[tool.poetry]
name = "fakedown"
version = "0.1.0"
description = "A fake markdown post generator for Static Site Generators using Markov chains"
authors = ["Jace Ju <jaceju@kkcompany.com>"]
readme = "README.md"
license = "LGPL-2.1-or-later"
keywords = ["markdown", "generator", "markov", "jekyll", "eleventy", "static-site"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-flask = "^1.3.0"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"

[tool.poetry.scripts]
fakedown = "MarkovJekyll:main"
webapp = "webapp:app"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
